# curriculum

./: README.md  app.wsgi  pyproject.toml
src/curriculum/: __init__.py  app.wsgi  forms.py  models.py  run.py
src/curriculum/static/: base_style.css
src/curriculum/templates/: base_template.html  cv_view.html  index.html  login_form.html
src/curriculum/templates/admin/: cv_form.html  signup_form.html
